--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -325,7 +325,7 @@
    "label": "Float Precision", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "\n2\n3\n4\n5\n6\n7\n8\n9",
+   "options": "\n2\n3\n4\n5\n6\n7\n8\n9", 
    "permlevel": 0, 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
@@ -338,39 +338,39 @@
    "unique": 0
   }, 
   {
-   "allow_bulk_edit": 0,
-   "allow_on_submit": 0,
-   "bold": 0,
-   "collapsible": 0,
-   "columns": 0,
-   "description": "If not set, the currency precision will depend on number format",
-   "fieldname": "currency_precision",
-   "fieldtype": "Select",
-   "hidden": 0,
-   "ignore_user_permissions": 0,
-   "ignore_xss_filter": 0,
-   "in_filter": 0,
-   "in_global_search": 0,
-   "in_list_view": 0,
-   "in_standard_filter": 0,
-   "label": "Currency Precision",
-   "length": 0,
-   "no_copy": 0,
-   "options": "\n1\n2\n3\n4\n5\n6\n7\n8\n9",
-   "permlevel": 0,
-   "precision": "",
-   "print_hide": 0,
-   "print_hide_if_no_value": 0,
-   "read_only": 0,
-   "remember_last_selected_value": 0,
-   "report_hide": 0,
-   "reqd": 0,
-   "search_index": 0,
-   "set_only_once": 0,
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "description": "If not set, the currency precision will depend on number format", 
+   "fieldname": "currency_precision", 
+   "fieldtype": "Select", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Currency Precision", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "\n1\n2\n3\n4\n5\n6\n7\n8\n9", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
    "unique": 0
-  },
+  }, 
   {
-   "allow_bulk_edit": 0,
+   "allow_bulk_edit": 0, 
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 1, 
@@ -470,7 +470,7 @@
    "description": "Run scheduled jobs only if checked", 
    "fieldname": "enable_scheduler", 
    "fieldtype": "Check", 
-   "hidden": 1,
+   "hidden": 1, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
@@ -652,7 +652,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "default": "", 
+   "default": "2", 
    "depends_on": "eval:doc.enable_password_policy==1", 
    "fieldname": "minimum_password_score", 
    "fieldtype": "Select", 
@@ -902,7 +902,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-04-25 12:00:12.846542",
+ "modified": "2017-05-01 15:27:11.079447", 
  "modified_by": "Administrator", 
  "module": "Core", 
  "name": "System Settings", 
