--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ httplib2
 jinja2
 markdown2
 markupsafe
-mysql-python==1.2.5
+mysqlclient==1.3.8
 python-geoip
 python-geoip-geolite2
 python-dateutil
