Modified By to Administrator

--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -933,8 +933,8 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-05-18 18:46:25.054343", 
- "modified_by": "g@n.com", 
+ "modified": "2017-05-19 09:12:50.353887", 
+ "modified_by": "Administrator", 
  "module": "Core", 
  "name": "System Settings", 
  "name_case": "", 
