--- a/frappe/core/doctype/domain_settings/domain_settings.json
+++ b/frappe/core/doctype/domain_settings/domain_settings.json
@@ -2,15 +2,15 @@
  "allow_copy": 0, 
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
- "allow_rename": 1, 
- "autoname": "field:role_name", 
+ "allow_rename": 0, 
  "beta": 0, 
- "creation": "2013-01-08 15:50:01", 
+ "creation": "2017-05-03 16:28:11.295095", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
- "document_type": "Document", 
- "editable_grid": 0, 
+ "document_type": "", 
+ "editable_grid": 1, 
+ "engine": "InnoDB", 
  "fields": [
   {
    "allow_bulk_edit": 0, 
@@ -18,8 +18,8 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "role_name", 
-   "fieldtype": "Data", 
+   "fieldname": "domains", 
+   "fieldtype": "Section Break", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -27,39 +27,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Role Name", 
-   "length": 0, 
-   "no_copy": 0, 
-   "oldfieldname": "role_name", 
-   "oldfieldtype": "Data", 
-   "permlevel": 0, 
-   "print_hide": 0, 
-   "print_hide_if_no_value": 0, 
-   "read_only": 0, 
-   "remember_last_selected_value": 0, 
-   "report_hide": 0, 
-   "reqd": 1, 
-   "search_index": 0, 
-   "set_only_once": 0, 
-   "unique": 0
-  }, 
-  {
-   "allow_bulk_edit": 0, 
-   "allow_on_submit": 0, 
-   "bold": 0, 
-   "collapsible": 0, 
-   "columns": 0, 
-   "description": "If disabled, this role will be removed from all users.", 
-   "fieldname": "disabled", 
-   "fieldtype": "Check", 
-   "hidden": 0, 
-   "ignore_user_permissions": 0, 
-   "ignore_xss_filter": 0, 
-   "in_filter": 0, 
-   "in_global_search": 0, 
-   "in_list_view": 0, 
-   "in_standard_filter": 0, 
-   "label": "Disabled", 
+   "label": "Domains", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -80,17 +48,16 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "default": "1", 
-   "fieldname": "desk_access", 
-   "fieldtype": "Check", 
+   "fieldname": "domains_html", 
+   "fieldtype": "HTML", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
    "in_global_search": 0, 
-   "in_list_view": 1, 
+   "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Desk Access", 
+   "label": "Domains", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -111,19 +78,19 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "restrict_to_domain", 
-   "fieldtype": "Link", 
-   "hidden": 0, 
+   "fieldname": "active_domains", 
+   "fieldtype": "Table", 
+   "hidden": 1, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Restrict To Domain", 
+   "label": "Active Domains", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Domain", 
+   "options": "Has Domain", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -140,18 +107,18 @@
  "has_web_view": 0, 
  "hide_heading": 0, 
  "hide_toolbar": 0, 
- "icon": "fa fa-bookmark", 
- "idx": 1, 
+ "idx": 0, 
  "image_view": 0, 
  "in_create": 0, 
  "is_submittable": 0, 
- "issingle": 0, 
+ "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-05-04 11:03:41.533058", 
+ "modified": "2017-05-12 17:01:18.615000", 
  "modified_by": "Administrator", 
  "module": "Core", 
- "name": "Role", 
+ "name": "Domain Settings", 
+ "name_case": "", 
  "owner": "Administrator", 
  "permissions": [
   {
@@ -167,7 +134,7 @@
    "permlevel": 0, 
    "print": 1, 
    "read": 1, 
-   "report": 1, 
+   "report": 0, 
    "role": "System Manager", 
    "set_user_permissions": 0, 
    "share": 1, 
@@ -179,7 +146,8 @@
  "read_only": 0, 
  "read_only_onload": 0, 
  "show_name_in_global_search": 0, 
- "sort_order": "ASC", 
+ "sort_field": "modified", 
+ "sort_order": "DESC", 
  "track_changes": 1, 
  "track_seen": 0
 }
