--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -818,7 +818,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Allow Error traceback in Server Error Message", 
+   "label": "Show Full Error and Allow Reporting of Issues to the Developer", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
