--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,17 @@ dist: trusty
 python:
   - "2.7"
 
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
 services:
   - mysql
 
 before_install:
-  - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
@@ -23,18 +29,21 @@ install:
   - cd ~/ && bench init frappe-bench --frappe-path $TRAVIS_BUILD_DIR
   - cp -r $TRAVIS_BUILD_DIR/test_sites/test_site ~/frappe-bench/sites/
 
-script:
-  - set -e
-  - bench --verbose run-tests
-
 before_script:
   - mysql -u root -ptravis -e 'create database test_frappe'
   - echo "USE mysql;\nCREATE USER 'test_frappe'@'localhost' IDENTIFIED BY 'test_frappe';\nFLUSH PRIVILEGES;\n" | mysql -u root -ptravis
   - echo "USE mysql;\nGRANT ALL PRIVILEGES ON \`test_frappe\`.* TO 'test_frappe'@'localhost';\n" | mysql -u root -ptravis
   
   - cd ~/frappe-bench
-  - npm install babel-core less chokidar babel-preset-es2015 babel-preset-es2016 babel-preset-es2017 babel-preset-babili
+  - npm install babel-core less chokidar babel-preset-es2015 babel-preset-es2016 babel-preset-es2017 babel-preset-babili chromedriver telebot
+  - npm install -g nightwatch
+  # - node apps/frappe/frappe/nightwatch.js
   - bench use test_site
   - bench reinstall --yes
   - bench start &
   - sleep 10
+
+script:
+  # - set -e
+  # - bench --verbose run-tests
+  - nightwatch --config apps/frappe/frappe/nightwatch.js --env ci_server --app frappe
