--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ group: deprecated-2017Q2
 python:
   - "2.7"
 
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 services:
   - mysql
 
