[travis] try running ui tests after unittests are done

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ addons:
       - google-chrome
     packages:
       - google-chrome-stable
-  sauce_connect:
-    username: "rmehta1"
-    access_key: "a80640ec-24c8-44ad-9398-1b6f123ae4a1"
+  # sauce_connect:
+  #   username: "rmehta1"
+  #   access_key: "a80640ec-24c8-44ad-9398-1b6f123ae4a1"
 
 python:
   - "2.7"
@@ -51,5 +51,6 @@ before_script:
 
 script:
   - set -e
-  - bench --verbose run-tests --module frappe.tests.ui.test_login
-  #- bench --verbose run-tests
+  - bench --verbose run-tests
+  - sleep 5
+  - bench --verbose run-tests --ui-tests
