--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -745,7 +745,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "description": "eg. If Apply User Permissions is checked for Report DocType but no User Permissions are defined for Report for a User, then all Reports are shown to that User", 
+   "description": "If Apply User Permissions is checked for Report DocType but no User Permissions are defined for Report for a User, then all Reports are shown to that User", 
    "fieldname": "ignore_user_permissions_if_missing", 
    "fieldtype": "Check", 
    "hidden": 0, 
@@ -777,7 +777,7 @@
    "collapsible": 0, 
    "columns": 0, 
    "default": "0", 
-   "description": "For ex. If Apply Strict User Permission is checked and User Permission is defined for a DocType for a User, then all the documents where value of link field of that Doctype is blank will not be shown to that User.", 
+   "description": "If Apply Strict User Permission is checked and User Permission is defined for a DocType for a User, then all the documents where value of the link is blank, will not be shown to that User", 
    "fieldname": "apply_strict_user_permissions", 
    "fieldtype": "Check", 
    "hidden": 0, 
