--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -745,7 +745,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "description": "eg. If Apply User Permissions is checked for Report DocType but no User Permissions are defined for Report for a User, then all Reports are shown to that User", 
+   "description": "If Apply User Permissions is checked for Report DocType but no User Permissions are defined for Report for a User, then all Reports are shown to that User", 
    "fieldname": "ignore_user_permissions_if_missing", 
    "fieldtype": "Check", 
    "hidden": 0, 
@@ -756,6 +756,38 @@
    "in_list_view": 0, 
    "in_standard_filter": 0, 
    "label": "Ignore User Permissions If Missing", 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "default": "0", 
+   "description": "If Apply Strict User Permission is checked and User Permission is defined for a DocType for a User, then all the documents where value of the link is blank, will not be shown to that User", 
+   "fieldname": "apply_strict_user_permissions", 
+   "fieldtype": "Check", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Apply Strict User Permissions", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -965,7 +997,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-06-12 13:05:28.924098", 
+ "modified": "2017-06-23 07:48:10.453011", 
  "modified_by": "Administrator", 
  "module": "Core", 
  "name": "System Settings", 
