[tests] less verbose logs

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,6 @@ before_script:
 
 script:
   - set -e
-  - bench --verbose run-tests
+  - bench run-tests
   - sleep 5
-  - bench --verbose run-ui-tests --app frappe
+  - bench run-ui-tests --app frappe
