Refactor data migration module

--- a/frappe/data_migration/doctype/data_migration_mapping_detail/data_migration_mapping_detail.json
+++ b/frappe/data_migration/doctype/data_migration_mapping_detail/data_migration_mapping_detail.json
@@ -18,7 +18,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "source_fieldname", 
+   "fieldname": "remote_fieldname", 
    "fieldtype": "Data", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -27,7 +27,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Source Fieldname", 
+   "label": "Remote Fieldname", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -48,7 +48,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "target_fieldname", 
+   "fieldname": "local_fieldname", 
    "fieldtype": "Data", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -57,7 +57,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Target Fieldname", 
+   "label": "Local Fieldname", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -113,8 +113,8 @@
  "issingle": 0, 
  "istable": 1, 
  "max_attachments": 0, 
- "modified": "2017-08-11 05:23:05.592509", 
- "modified_by": "Administrator", 
+ "modified": "2017-09-07 12:45:55.817948", 
+ "modified_by": "faris@erpnext.com", 
  "module": "Data Migration", 
  "name": "Data Migration Mapping Detail", 
  "name_case": "", 
