--- a/frappe/data_migration/doctype/data_migration_mapping/data_migration_mapping.json
+++ b/frappe/data_migration/doctype/data_migration_mapping/data_migration_mapping.json
@@ -49,7 +49,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "source_objectname", 
+   "fieldname": "remote_objectname", 
    "fieldtype": "Data", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -58,7 +58,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Source Objectname", 
+   "label": "Remote Objectname", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -79,7 +79,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "source_primary_key", 
+   "fieldname": "remote_primary_key", 
    "fieldtype": "Data", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -88,7 +88,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Source Primary Key", 
+   "label": "Remote Primary Key", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -109,7 +109,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "target_doctype", 
+   "fieldname": "local_doctype", 
    "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -118,7 +118,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Target DocType", 
+   "label": "Local DocType", 
    "length": 0, 
    "no_copy": 0, 
    "options": "DocType", 
@@ -130,6 +130,66 @@
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 1, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "column_break_5", 
+   "fieldtype": "Column Break", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "mapping_type", 
+   "fieldtype": "Select", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Mapping Type", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "Push\nPull\nSync", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
    "search_index": 0, 
    "set_only_once": 0, 
    "unique": 0
@@ -230,7 +290,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "mapping_details", 
+   "fieldname": "fields", 
    "fieldtype": "Table", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -239,7 +299,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Mapping Details", 
+   "label": "Fields", 
    "length": 0, 
    "no_copy": 0, 
    "options": "Data Migration Mapping Detail", 
@@ -386,8 +446,8 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-09-01 07:53:38.402040", 
- "modified_by": "Administrator", 
+ "modified": "2017-09-07 13:13:26.341005", 
+ "modified_by": "faris@erpnext.com", 
  "module": "Data Migration", 
  "name": "Data Migration Mapping", 
  "name_case": "", 
