added Webcam to globals

--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,7 @@
 		"Taggle": true,
 		"Gantt": true,
 		"Slick": true,
+		"Webcam": true,
 		"PhotoSwipe": true,
 		"PhotoSwipeUI_Default": true,
 		"fluxify": true,
