test: Only include ui test for an extra build stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,18 +23,12 @@ addons:
 
 matrix:
   include:
-  - name: "Python 2.7 with MariaDB"
-    python: 2.7
-    env: DB=mariadb
-  - name: "Python 3.6 with MariaDB"
-    python: 3.6
-    env: DB=mariadb
-  - name: "Python 3.6 with Postgres"
-    python: 3.6
-    env: DB=postgres
   - name: "UI Tests on Python 2.7 and MariaDB"
     python: 2.7
     env: TEST_TYPE=ui
+  exclude:
+  - python: 2.7
+    env: DB=postgres
 
 install:
   - nvm install 8 && nvm use 8
