fix: Cache yarn and pip packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 dist: trusty
 sudo: required
 
+cache:
+  directories:
+    - $HOME/.cache/yarn
+    - $HOME/.cache/pip
+
 python:
   - 2.7
   - 3.6
