fix: Notification test in Postgres

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,12 @@ matrix:
     env: DB=postgres
   - python: 3.6
     env: TEST_TYPE=ui
+  - python: 3.6
+    env: DB=mariadb
+  - python: 2.7
+    env: DB=mariadb
+  - python: 2.7
+    env: TEST_TYPE=ui
 
 install:
   - $TRAVIS_BUILD_DIR/.travis/install.sh
