fix: make energy point rule enabled bt default

--- a/frappe/social/doctype/energy_point_settings/energy_point_settings.json
+++ b/frappe/social/doctype/energy_point_settings/energy_point_settings.json
@@ -20,6 +20,7 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
+   "default": "1",
    "fetch_if_empty": 0,
    "fieldname": "enabled",
    "fieldtype": "Check",
@@ -91,7 +92,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 0,
- "modified": "2019-03-19 13:18:27.332132",
+ "modified": "2019-03-19 16:29:17.466781",
  "modified_by": "Administrator",
  "module": "Social",
  "name": "Energy Point Settings",
